Max z-index for fixed masthead

--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -12,6 +12,7 @@
   #malmo-masthead {
     @include clearfix();
     position: fixed;
+    z-index: 2147483647;
     top: 0;
     min-width: 0;
     width: emize(320);
